@@ -42,9 +42,8 @@ PROJECT( OgreMeshy )
 FIND_PACKAGE(wxWidgets COMPONENTS core base aui adv REQUIRED)
 include( "${wxWidgets_USE_FILE}" )
 
-FIND_PACKAGE(OGRE COMPONENTS Overlay REQUIRED)
+FIND_PACKAGE(OGRE REQUIRED)
 include_directories( ${OGRE_INCLUDE_DIRS} )
-include_directories( ${OGRE_Overlay_INCLUDE_DIR} )
 
 if(UNIX)
 	FIND_PACKAGE(GTK2 COMPONENTS gtk)
@@ -97,7 +96,7 @@ endif()
 ADD_EXECUTABLE(OgreMeshy WIN32 ${HEADER_FILES} ${SOURCE_FILES} )
 TARGET_LINK_LIBRARIES( OgreMeshy ${wxWidgets_LIBRARIES} )
 TARGET_LINK_LIBRARIES( OgreMeshy ${OGRE_LIBRARIES} )
-TARGET_LINK_LIBRARIES( OgreMeshy ${OGRE_Overlay_LIBRARIES} )
+#TARGET_LINK_LIBRARIES( OgreMeshy "E:/Projects/SDK/Ogre/build/lib/Release/OgreMain.lib" )
 
 if(UNIX)
 	TARGET_LINK_LIBRARIES( OgreMeshy ${GTK2_LIBRARIES} )
@@ -148,7 +147,7 @@ set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 #SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReadMe.txt")
 # TODO: add the version variable at the top in here
 SET(CPACK_PACKAGE_VERSION_MAJOR "1")
-SET(CPACK_PACKAGE_VERSION_MINOR "5")
+SET(CPACK_PACKAGE_VERSION_MINOR "4")
 SET(CPACK_PACKAGE_VERSION_PATCH "0")
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "OgreMeshy")
 
