@@ -9,6 +9,6 @@ PluginFolder=/opt/ogremeshy/Plugins
  Plugin=RenderSystem_GL
 # Plugin=RenderSystem_GLES
 # Plugin=RenderSystem_GLES2
- Plugin=Plugin_CgProgramManager
+ #Plugin=Plugin_CgProgramManager
  Plugin=Plugin_OctreeSceneManager
  Plugin=Plugin_ParticleFX
